[tool.poetry]
name = "\"персональний помічник\""
version = "0.1.0"
description = "\"personal assistant app\""
authors = ["Lera Polish <lerencija@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
